Fix spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,7 +14,6 @@ p {
 }
 
 h1 {
-    margin-top: 300px;
     font-size: 50px;
 }
 
